--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     container_name: pg_database
     restart: always
     volumes:
-      - ./pg_data:/var/lib/postgresql/data
+      - ./storage/postgres_data:/var/lib/postgresql/data
     env_file:
       - ./env/.postgres.env
     networks:
@@ -53,4 +53,4 @@ services:
       my-network:
         ipv4_address: 10.0.0.12
     volumes:
-      - ./pgadmin_data:/var/lib/pgadmin
+      - ./storage/pgadmin_data:/var/lib/pgadmin
