--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     ports:
       - 5000:3000
     working_dir: /usr/src/app
-    command: bash -c "npm install && npm run start:dev"
+    command: bash -c "npm install && npx prisma migrate dev && npm run start:dev"
     networks:
       my-network:
         ipv4_address: 10.0.0.3
