--- a/src/backend_nest/.env
+++ b/src/backend_nest/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://admin:password@postgres:5432/trs_db?schema=public"
+POSTGRES_USER = admin
+POSTGRES_PASSWORD = password
+POSTGRES_DB = postgresql
