--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,9 @@ services:
       - ./src/backend_nest:/usr/src/app
     ports:
       - 5000:3000
+      - 5333:5555
     working_dir: /usr/src/app
-    command: bash -c "npm install && npx prisma migrate dev && npm run start:dev"
+    command: bash -c "npm install && npx prisma migrate reset --force && npx prisma studio > /dev/null | npm run start:dev"
     networks:
       my-network:
         ipv4_address: 10.0.0.3
@@ -40,10 +41,6 @@ services:
     image: postgres:latest
     container_name: pg_database
     restart: always
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./storage/postgres_data:/var/lib/postgresql/data
     env_file:
