--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,3 +66,13 @@ services:
         ipv4_address: 10.0.0.5
     volumes:
       - ./storage/pgadmin_data:/var/lib/pgadmin
+  
+  # swagger:
+  #   image: swaggerapi/swagger-ui
+  #   container_name: swagger
+  #   restart: always
+  #   ports:
+  #     - 8888:8080
+  #   networks:
+  #     my-network:
+  #       ipv4_address: 10.0.0.6
