--- a/env/.postgres.env
+++ b/env/.postgres.env
@@ -1,3 +1,3 @@
-POSTGRES_PASSWORD=password
-POSTGRES_USER=admin
-POSTGRES_DB=trs_db 
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=ping_pong_db
