--- a/src/backend_nest/.env.example
+++ b/src/backend_nest/.env.example
@@ -1,6 +1,6 @@
-POSTGRES_PASSWORD=password
-POSTGRES_USER=admin
-POSTGRES_DB=trs_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=ping_pong_db
 
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -8,7 +8,7 @@ POSTGRES_DB=trs_db
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public"
 
 FORTYTWO_APP_ID=<42-APP-UID>
 FORTYTWO_APP_SECRET=<42-APP-SECRET>
