--- a/storage/nginx/conf.d/loadbalancer.conf
+++ b/storage/nginx/conf.d/loadbalancer.conf
@@ -10,11 +10,8 @@ server {
     location / {
         proxy_pass http://10.0.0.2:3000;
     }
-}
-server {
-    listen 80;
-    server_name api.127.0.0.1.nip.io;
-    location / {
+
+    location /api {
         proxy_pass http://10.0.0.3:3000;
     }
 }
