--- a/storage/nginx/conf.d/loadbalancer.conf
+++ b/storage/nginx/conf.d/loadbalancer.conf
@@ -7,6 +7,7 @@ upstream backend {
 server {
     listen 80;
     server_name 127.0.0.1.nip.io;
+    access_log off;
     location / {
         proxy_pass http://10.0.0.2:3000;
     }
