--- a/src/backend_nest/package.json
+++ b/src/backend_nest/package.json
@@ -28,6 +28,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.8.0",
     "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
