--- a/src/backend_nest/package.json
+++ b/src/backend_nest/package.json
@@ -32,6 +32,8 @@
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.8.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
