--- a/src/frontend_next/package.json
+++ b/src/frontend_next/package.json
@@ -14,9 +14,10 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
-    "bootstrap": "^5.2.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "flowbite": "^1.6.0",
+    "flowbite-react": "^0.3.7",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
