--- a/src/frontend_next/package.json
+++ b/src/frontend_next/package.json
@@ -18,6 +18,8 @@
     "eslint-config-next": "13.1.1",
     "flowbite": "^1.6.0",
     "flowbite-react": "^0.3.7",
+    "fsevents": "^2.3.2",
+    "image-resize": "^1.2.9",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
