ayoube game code run as script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - 443:443
     volumes:
       - ./storage/nginx/conf.d:/etc/nginx/conf.d
+      - ./src/frontend_next/static:/usr/share/nginx/html/static
       # - ./storage/nginx/ssl:/etc/nginx/ssl
     networks:
       my-network:
