--- a/storage/nginx/conf.d/loadbalancer.conf
+++ b/storage/nginx/conf.d/loadbalancer.conf
@@ -8,6 +8,9 @@ server {
     listen 80;
     server_name 127.0.0.1.nip.io;
     access_log off;
+    location /static {
+        alias /usr/share/nginx/html/static;
+    }
     location / {
         proxy_pass http://10.0.0.2:3000;
     }
