--- a/src/frontend_next/package.json
+++ b/src/frontend_next/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reactstrap": "^9.1.5",
+    "socket.io-client": "^4.5.4",
     "styled-component": "^2.8.0",
     "typescript": "4.9.4"
   },
