--- a/src/backend_nest/package.json
+++ b/src/backend_nest/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.8.0",
     "class-transformer": "^0.5.1",
@@ -67,7 +68,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.4"
   },
   "jest": {
     "moduleFileExtensions": [
