--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     # ports:
     #   - 80:3000
     working_dir: /usr/src/app
-    command: bash -c "npm install && npm run dev --force"
+    command: bash -c "npm install && npm run dev"
     extra_hosts:
       - "api.127.0.0.1.nip.io:10.0.0.3"
     networks:
