--- a/src/frontend_next/tsconfig.json
+++ b/src/frontend_next/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/*/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/*/*.tsx", "pages/game/[...param].js"],
   "exclude": ["node_modules"]
 }
