welcome page backend

--- a/src/backend_nest/.env.example
+++ b/src/backend_nest/.env.example
@@ -22,4 +22,5 @@ AUTH_APP_NAME=ping1337pong
 # Redirections
 DOMAIN_URL="http://127.0.0.1.nip.io"
 HOME_URL="${DOMAIN_URL}/"
+WELCOME_URL="${DOMAIN_URL}/welcome"
 VERIFY_2FA_URL="${DOMAIN_URL}/verify2fa"
