--- a/src/backend_nest/package.json
+++ b/src/backend_nest/package.json
@@ -31,6 +31,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.8.0",
+    "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
