--- a/src/frontend_next/package.json
+++ b/src/frontend_next/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@svgr/webpack": "^6.5.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -22,6 +23,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "reactstrap": "^9.1.5",
     "socket.io-client": "^4.5.4",
     "styled-component": "^2.8.0",
