typed everything sucessfuly built, fixed bugs

--- a/storage/nginx/conf.d/loadbalancer.conf
+++ b/storage/nginx/conf.d/loadbalancer.conf
@@ -8,6 +8,7 @@ server {
     listen 80;
     server_name 127.0.0.1.nip.io;
     access_log off;
+    error_log    off;
     location /static {
         alias /usr/share/nginx/html/static;
     }
@@ -42,6 +43,7 @@ server {
     }
 }
 server {
+    error_log    off;
     listen 80;
     server_name prisma.127.0.0.1.nip.io;
     location / {
@@ -49,6 +51,7 @@ server {
     }
 }
 server {
+    error_log    off;
     listen 80;
     server_name pgadmin.127.0.0.1.nip.io;
     location / {
