--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     #   - 80:3000
     working_dir: /usr/src/app
     command: bash -c "npm install && npm run dev"
+    # command: bash -c "npm install && npm run build && npm run start"
     extra_hosts:
       - "api.127.0.0.1.nip.io:10.0.0.3"
     networks:
@@ -52,6 +53,8 @@ services:
     #   - 5333:5555
     working_dir: /usr/src/app
     command: bash -c "npm install && npx prisma migrate reset --force && npx prisma studio > /dev/null | npm run start:dev"
+    #  npx prisma generate || npx prisma dev
+    # command: bash -c "npm install && npx prisma migrate deploy && npm run start"
     networks:
       my-network:
         ipv4_address: 10.0.0.3
