--- a/storage/nginx/conf.d/loadbalancer.conf
+++ b/storage/nginx/conf.d/loadbalancer.conf
@@ -9,8 +9,8 @@ server {
     server_name 127.0.0.1.nip.io;
     access_log off;
     error_log    off;
-    location /static {
-        alias /usr/share/nginx/html/static;
+    location /public {
+        alias /usr/share/nginx/html/public;
     }
     location / {
         proxy_pass http://10.0.0.2:3000;
