--- a/src/frontend_next/package.json
+++ b/src/frontend_next/package.json
@@ -29,6 +29,7 @@
     "reactstrap": "^9.1.5",
     "socket.io-client": "^4.5.4",
     "styled-component": "^2.8.0",
+    "timeago.js": "^4.0.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
