--- a/storage/nginx/conf.d/loadbalancer.conf
+++ b/storage/nginx/conf.d/loadbalancer.conf
@@ -6,7 +6,7 @@ upstream backend {
 
 server {
     listen 80;
-    server_name 127.0.0.1.nip.io;
+    server_name e2r3p4.1337.ma;
     access_log off;
     error_log    off;
     location /public {
@@ -45,7 +45,7 @@ server {
 server {
     error_log    off;
     listen 80;
-    server_name prisma.127.0.0.1.nip.io;
+    server_name prisma.e2r3p4.1337.ma;
     location / {
         proxy_pass http://10.0.0.3:5555;
     }
@@ -53,7 +53,7 @@ server {
 server {
     error_log    off;
     listen 80;
-    server_name pgadmin.127.0.0.1.nip.io;
+    server_name pgadmin.e2r3p4.1337.ma;
     location / {
         proxy_pass http://10.0.0.5:80;
     }
