--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
     # ports:
     #   - 80:3000
     working_dir: /usr/src/app
-    command: bash -c "npm install && npm run dev"
-    # command: bash -c "npm install && npm run build && npm run start"
+    # command: bash -c "npm install && npm run dev"
+    command: bash -c "npm install && npm run build && npm run start"
     extra_hosts:
       - "api.127.0.0.1.nip.io:10.0.0.3"
     networks:
@@ -52,7 +52,8 @@ services:
     #   - 3000:3000
     #   - 5333:5555
     working_dir: /usr/src/app
-    command: bash -c "npm install && npx prisma migrate reset --force && npx prisma studio > /dev/null | npm run start:dev"
+    # command: bash -c "npm install && npx prisma migrate reset --force && npx prisma studio > /dev/null | npm run start:dev"
+    command: bash -c "npm install && npx prisma migrate deploy &&  npm run start"
     #  npx prisma generate || npx prisma dev
     # command: bash -c "npm install && npx prisma migrate deploy && npm run start"
     networks:
