--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
     # ports:
     #   - 80:3000
     working_dir: /usr/src/app
-    # command: bash -c "npm install && npm run dev"
-    command: bash -c "npm install && npm run build && npm run start"
+    command: bash -c "npm install && npm run dev"
+    # command: bash -c "npm install && npm run build && npm run start"
     extra_hosts:
       - "api.127.0.0.1.nip.io:10.0.0.3"
     networks:
