--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,6 @@ services:
     volumes:
       - ./storage/nginx/conf.d:/etc/nginx/conf.d
       - ./src/frontend_next/public:/usr/share/nginx/html/public
-      # - ./storage/nginx/ssl:/etc/nginx/ssl
     networks:
       my-network:
         ipv4_address: 10.0.0.111
@@ -29,8 +28,6 @@ services:
     restart: always
     volumes:
       - ./src/frontend_next:/usr/src/app
-    # ports:
-    #   - 80:3000
     working_dir: /usr/src/app
     # command: bash -c "npm install && npm run dev"
     command: bash -c "npm install && npm run build && npm run start"
@@ -48,20 +45,16 @@ services:
       - ./src/backend_nest:/usr/src/app
     depends_on:
       - postgres
-    # ports:
-    #   - 3000:3000
-    #   - 5333:5555
     working_dir: /usr/src/app
     # command: bash -c "npm install && npx prisma migrate reset --force && npx prisma studio > /dev/null | npm run start:dev"
     command: bash -c "npm install && npx prisma migrate deploy &&  npm run start"
     #  npx prisma generate || npx prisma dev
-    # command: bash -c "npm install && npx prisma migrate deploy && npm run start"
     networks:
       my-network:
         ipv4_address: 10.0.0.3
 
   postgres:
-    image: postgres:latest
+    image: postgres:15.1-bullseye
     container_name: postgres
     restart: always
     volumes:
