--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,24 +23,22 @@ services:
       my-network:
         ipv4_address: 10.0.0.111
 
-  Frontend:
+  frontend:
     image: node:18.12.1-buster
     container_name: Frontend
     restart: always
     volumes:
       - ./src/frontend_next:/usr/src/app
-    # ports:
-    #   - 80:3000
+    ports:
+      - 3000:3000
     working_dir: /usr/src/app
     # command: bash -c "npm install && npm run dev"
     command: bash -c "npm install && npm run build && npm run start"
-    extra_hosts:
-      - "api.127.0.0.1.nip.io:10.0.0.3"
     networks:
       my-network:
         ipv4_address: 10.0.0.2
   
-  Backend:
+  backend:
     image: node:18.12.1-buster
     container_name: Backend
     restart: always
@@ -48,9 +46,8 @@ services:
       - ./src/backend_nest:/usr/src/app
     depends_on:
       - postgres
-    # ports:
-    #   - 3000:3000
-    #   - 5333:5555
+    ports:
+      - 3000:3000
     working_dir: /usr/src/app
     # command: bash -c "npm install && npx prisma migrate reset --force && npx prisma studio > /dev/null | npm run start:dev"
     command: bash -c "npm install && npx prisma migrate deploy &&  npm run start"
