--- a/storage/nginx/conf.d/loadbalancer.conf
+++ b/storage/nginx/conf.d/loadbalancer.conf
@@ -1,30 +1,28 @@
-upstream backend {
-    server 10.0.0.2;
-    server 10.0.0.3;
-    server 10.0.0.5;
+upstream back {
+    server frontend:3000;
+    server backend:3000;
 }
 
 server {
     listen 80;
-    server_name 127.0.0.1.nip.io;
     access_log off;
     error_log    off;
     location /public {
         alias /usr/share/nginx/html/public;
     }
     location / {
-        proxy_pass http://10.0.0.2:3000;
+        proxy_pass http://frontend:3000;
     }
 
     location /api {
-        proxy_pass http://10.0.0.3:3000;
+        proxy_pass http://backend:3000;
     }
     
     location /_next {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
 
-        proxy_pass http://10.0.0.2:3000;
+        proxy_pass http://frontend:3000;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -35,26 +33,10 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
 
-      proxy_pass http://10.0.0.3:3000;
+      proxy_pass http://backend:3000;
 
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
-    }
-}
-server {
-    error_log    off;
-    listen 80;
-    server_name prisma.127.0.0.1.nip.io;
-    location / {
-        proxy_pass http://10.0.0.3:5555;
-    }
-}
-server {
-    error_log    off;
-    listen 80;
-    server_name pgadmin.127.0.0.1.nip.io;
-    location / {
-        proxy_pass http://10.0.0.5:80;
     }
 }
